<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorAccent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView

            android:layout_width="220dp"
            android:layout_height="230dp"
            android:background="@drawable/ss"
            android:padding="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            >


        </ImageView>
        <LinearLayout
            android:id="@+id/fieldLayout1"
            android:paddingHorizontal="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username or email"
                android:id="@+id/loginUser"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:background="@drawable/fieldrectangle"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="5dp"
                ></EditText>

            <EditText
                android:layout_marginVertical="20dp"
                android:textColorHint="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:id="@+id/loginPass"
                android:textColor="#fff"
                android:background="@drawable/fieldrectangle"
                android:paddingVertical="10dp"
                android:paddingHorizontal="10dp"
                >

            </EditText>
            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:id="@+id/btn_Login"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="Sign in"
                android:textAllCaps="false"

                android:background="@drawable/loginregnutton"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                >

            </Button>




            <LinearLayout
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:gravity="center_horizontal">

                <TextView
                    android:paddingLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:text="Already have account?"


                    tools:ignore="RtlCompat">
                </TextView>

                <Button
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:gravity="bottom"
                    android:text="Register"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:onClick="goRegisterButton"
                    tools:ignore="RtlCompat">


                </Button>

            </LinearLayout>

        </LinearLayout>











    </LinearLayout>






</RelativeLayout>